# gubuzakatai

./: .env.example  .gitignore  AGENTS.md  README.md  SecondBrain_Development_Checklist.md  pyproject.toml
docs/architecture/: ai.md  database-fields.md  database-final-review.md  database-relations.md  database-tables.md  development-rules.md  file-structure.md  folder-structure.md  record-statuses.md  record-types.md  tags.md  voice.md
docs/concept/: purpose.md  use-cases.md
docs/history/: 2026-07.md
docs/ui/: folders.md  inbox.md  main-menu.md  main-screen.md  record-review.md  search.md  today.md  tomorrow.md  week.md
src/secondbrain/: __init__.py  __main__.py  app.py
src/secondbrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/secondbrain/bot/: __init__.py  handlers.py  navigation.py
src/secondbrain/config/: settings.py
src/secondbrain/models/: __init__.py  records.py
src/secondbrain/services/: __init__.py  capture.py  evening_reminder.py  inbox.py  link_metadata.py  tasks.py  voice.py
src/secondbrain/storage/: __init__.py  database.py  repositories.py  schema.py
tests/: test_app.py  test_capture.py  test_database.py  test_evening_reminder.py  test_inbox.py  test_link_metadata.py  test_navigation.py  test_settings.py  test_tasks.py  test_voice.py
