[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "secondbrain"
version = "0.1.0"
description = "Персональный Telegram-бот для быстрой фиксации мыслей и задач"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "python-telegram-bot[job-queue]>=22.8,<23.0",
    "SQLAlchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
